--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,4 +1,28 @@
+.container{
+    margin: 0 auto;
+    padding: 0 15px;
+    text-align: center;
+}
+
 h1 {
     color: hotpink;
-    font-family: cursive;
+    font-family: cursive;    
+}
+
+.currency-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+
+    width: 300px;
+    margin: 0 auto;
+    padding: 10px;
+    background-color: rgba(255, 105, 180, 0.39);
+    border: 2px solid hotpink;
+    border-radius: 20px;
+}
+
+.currency-form input {
+    width: 70px;
 }
