--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -4,16 +4,28 @@
     text-align: center;
 }
 
+h1, ul {
+    padding: 0;
+    margin: 0;
+}
+
+.currency-list {
+    list-style: none;
+    display: flex;
+    gap: 25px;
+    justify-content: center;
+}
+
 h1 {
     color: hotpink;
     font-family: cursive;    
 }
 
 .currency-form {
-    display: flex;
+    /* display: flex;
     flex-direction: column;
     align-items: center;
-    gap: 20px;
+    gap: 20px; */
 
     width: 300px;
     margin: 0 auto;
@@ -25,4 +37,23 @@ h1 {
 
 .currency-form input {
     width: 70px;
+}
+
+.currency-form label {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+/* .currency-form option {
+    display: inline-block;
+    width: 50px;
+} */
+
+.currency-form select {
+    width: 150px;
+}
+
+.currency-form select:focus {
+    width: auto;
 }
