--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -9,14 +9,30 @@ h1, ul {
     margin: 0;
 }
 
+header {
+    padding: 10px 0;
+}
+
+.bank {
+    display: block;
+    margin-bottom: 10px;
+}
+
 .currency-list {
     list-style: none;
     display: flex;
     gap: 25px;
     justify-content: center;
+
+    height: 20px;
+}
+
+main {
+    padding: 10px 0;
 }
 
 h1 {
+    margin-bottom: 10px;
     color: hotpink;
     font-family: cursive;    
 }
@@ -39,16 +55,15 @@ h1 {
     width: 70px;
 }
 
+.currency-form input:focus-visible {
+    border-color: hotpink;
+}
+
 .currency-form label {
     display: flex;
     align-items: center;
     gap: 10px;
 }
-
-/* .currency-form option {
-    display: inline-block;
-    width: 50px;
-} */
 
 .currency-form select {
     width: 150px;
@@ -57,3 +72,15 @@ h1 {
 .currency-form select:focus {
     width: auto;
 }
+
+/* [name="fromQuantity"].invalid {
+    border-color: rgb(255, 0, 0);
+} */
+
+/* .subscribe-form__input::placeholder {
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+} */
