--- a/src/scss/_color-theme.scss
+++ b/src/scss/_color-theme.scss
@@ -17,15 +17,15 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 auto;
     height: 40px;
     width: 40px;
     border-radius: 50%;
+    background-color: rgb(240, 240, 240);
     box-shadow: 5px 5px rgb(187, 135, 135);
-}
 
-.btn-color-theme:hover {
-    background-color: rgb(255, 255, 255);
+    &:hover {
+        background-color: rgb(255, 255, 255);
+    }
 }
 
 [hide] {
