--- a/src/scss/_converter.scss
+++ b/src/scss/_converter.scss
@@ -5,33 +5,29 @@
     background-color: var(--main-color);
     border: 2px solid var(--border-color);
     border-radius: 20px;
+
+    & label {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+    }
+
+    & p {
+        color: var(--txt-color);
+    }
+
+    & input {
+        width: 70px;
+
+        &:focus-visible {
+                border-color: var(--border-color);
+            }
+    }
 }
 
-.currency-form p {
-    color: var(--txt-color);
-}
-
-.currency-form input {
-    width: 70px;
-}
-
-.currency-form input:focus-visible {
-    border-color: var(--border-color);
-}
-
-.currency-form label {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-}
-
-.currency-form select {
-    /* width: 150px; */
-}
-
-.currency-form select:focus {
-    width: auto;
-}
+// .currency-form select:focus {
+//     width: auto;
+// }
 
 [data="empty"] {
     border-color: rgb(255, 0, 0);
